# defi-trader-demo

./: .gitignore  AZURE_KEYVAULT_README.md  README.md  env-example  key_vault.py  pydantic_trader_main.py  pyproject.toml  test_azure_cli.py  toml_full_backup.txt  toml_removed_dev_deps.txt  toml_removed_main_deps.txt  toml_removed_tool_configs.txt  uni_handler.py  uniswap_abis.json
docs/: AZURE_KEYVAULT.md  NOTES.md  SETUP.md  TRADING_EXPLAINER.md  TRADING_GUIDE.md
pydantic_trader/azure-cli/: __init__.py  azure_key_vault_cli.py  initialize_key_vault_cli.py  pyproject.toml
