[tool.poetry]
name = "DeFi Demo Trader"
version = "0.1.5"
description = "Demo-only DeFi trading app"
authors = ["catwhipseringninja <cat@catwhipseringninja.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
web3 = "^6.0.0"
numpy = "^1.24.0"
eth-typing = "^3.0.0"
eth-account = "^0.10.0"
python-dotenv = "^1.0.0"
aiohttp = "^3.11.12"
pyjwt = "^2.10.1"
cryptography = {version = ">=40.0.0,<41.0.0", python = ">=3.9.1,<4.0"}
argparse = "^1.4.0"
web3-data-tools = "^1.2.0"
pytest = "^8.3.5"
pytest-asyncio = "^0.25.3"
h11 = "0.16.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pytest = "^8.3.5"
pytest-asyncio = "^0.25.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["pydantic_trader/tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "asyncio: mark a test as an asyncio test",
]
