[tool.poetry]
name = "DeFi Demo Trader with Azure KeyVault Integration"
version = "0.2.0"
description = "Demo-only DeFi trading app with Azure KeyVault secret management"
authors = ["catwhipseringninja <cat@catwhipseringninja.com>"]
readme = ["README.md", "AZURE_KEYVAULT_README.md"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
azure-keyvault = "4.2.0"
azure-identity = "1.21.0"
azure-cli = "^2.72.0"
web3 = "^6.0.0"
python-dotenv = "^1.0.0"
cryptography = {version = ">=40.0.0,<41.0.0", python = ">=3.9.1,<4.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"