[tool.poetry]
name = "Azure KeyVault Secret Management"
version = "0.2.1"
description = "Programmatic local interaction with Azure KeyVault"
authors = ["catwhipseringninja <cat@catwhipseringninja.com>"]
readme = "AZURE_KEYVAULT_README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
setuptools= "^80.0.0"
web3 = "^6.0.0"
numpy = "^1.24.0"
eth-typing = "^3.0.0"
eth-account = "^0.10.0"
python-dotenv = "^1.0.0"
aiohttp = "^3.11.12"
pyjwt = "^2.10.1"
cryptography = {version = ">=40.0.0,<46.0.0", python = ">=3.9.1,<4.0"}
dotenv = "^0.9.9"
azure-keyvault = "4.2.0"
azure-identity = "1.21.0"
azure-cli = "^2.72.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 100
